--- a/src/app/features/produto/components/listagem-produto/listagem-produto.component.html
+++ b/src/app/features/produto/components/listagem-produto/listagem-produto.component.html
@@ -5,7 +5,7 @@
       <mat-card-content style="margin-top: 20px;">
         <div>
           <p class="produto-descricao">
-            {{produto.descricao}}
+            {{produto.nomeProduto}}
           </p>
           <p class="produto-preco">
             {{produto.precoUnitario | currency: 'BRL'}}
