--- a/src/app/features/pedido/components/cadastro-pedido/cadastro-pedido.component.html
+++ b/src/app/features/pedido/components/cadastro-pedido/cadastro-pedido.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="flex flex-col items-center mt-4 h-full">
   <h1>Finalize Seu Pedido!</h1>
   <form class="example-form" [formGroup]="formPedido">
     <mat-form-field class="example-full-width">
@@ -25,12 +25,12 @@
     </mat-form-field>
     <div>
       <ul style="list-style: none; padding: 0; margin: 0;" *ngFor="let item of itens">
-        <li style="font-size: 16px; margin-bottom: 8px;">Produto: {{item.produto.descricao}}</li>
+        <li style="font-size: 16px; margin-bottom: 8px;">Produto: {{item.produto.nomeProduto}}</li>
         <li style="font-size: 16px; margin-bottom: 8px;">Preço: {{item.produto.precoUnitario | currency: 'BRL'}}</li>
         <li style="font-size: 16px; margin-bottom: 8px;">Quantidade: {{item.quantidade}}</li>
         <mat-divider></mat-divider>
       </ul>
     </div>
-    <button color="primary" class="botao" mat-raised-button (click)="salvarPedido()">Finalizar Pedido</button>
+    <button class="text-lg mb-4 mt-4" color="primary" mat-raised-button (click)="salvarPedido()">Finalizar Pedido</button>
   </form>
 </div>
