--- a/src/app/features/produto/components/detalhe-produto/detalhe-produto.component.html
+++ b/src/app/features/produto/components/detalhe-produto/detalhe-produto.component.html
@@ -1,54 +1,30 @@
-<div *ngIf="produto" id="container">
-  <div class="imagem">
-    <img width="700px" height="490px" [src]="produto.nomeImagem" alt="{{ produto.descricao }}"/>
+<div class="md:grid md:grid-cols-3 flex flex-col mt-5 mb-5 md:h-full" *ngIf="produto">
+  <div class="flex flex-col items-center">
+    <img class="md:w-3/5 w-1/3" [src]="produto.nomeImagem" alt="{{ produto.nomeProduto }}"/>
   </div>
-  <div class="compra">
-    <h2 style="font-size: 24px; margin-bottom: 10px">
-      {{ produto.descricao }}
-    </h2>
-
-    <div style="margin-top: 20px;">
+  <div class="flex flex-col items-center mt-7 ml-5 mr-5" >
+     <h2>Descrição do Produto</h2>
+     <p class="break-all">{{produto.descricao}}</p>
+  </div>
+  <div class="flex flex-col text-center mt-7">
+    <div>
       <span style="font-size: 25px">Preço: </span>
       <span style="font-size: 25px; color: green">{{
         produto.precoUnitario | currency : "BRL" : "symbol" : "1.2-2"}}</span>
     </div>
-
     <form [formGroup]="meuFormulario">
-      <div style="margin-top: 10px">
+      <div class="mt-4">
         <mat-form-field class="example-full-width">
           <mat-label>Quantidade</mat-label>
           <input matInput placeholder="Quantidade do produto" formControlName="quantidade"/>
         </mat-form-field>
       </div>
     </form>
-
     <div>
-      <button color="primary" class="botao" mat-raised-button routerLink="pedido" (click)="realizarPedido()">Comprar Agora</button>
+      <button class="text-lg" color="primary" mat-raised-button routerLink="pedido" (click)="realizarPedido()">Comprar Agora</button>
     </div>
-    <div style="margin-top: 20px">
-      <button color="primary" mat-raised-button class="botao" (click)="adicionarAoCarrinho()"> Adicionar ao Carrinho </button>
-    </div>
-  </div>
-  <div class="informacoes">
-    <div>
-      <h3 style="font-size: 20px">Mais Informações</h3>
-      <ul style="list-style: none; padding: 0; margin: 0">
-        <li style="font-size: 16px; margin-bottom: 8px">Peso: kg</li>
-        <li style="font-size: 16px; margin-bottom: 8px">Dimensões: rwrey</li>
-        <li style="font-size: 16px; margin-bottom: 8px">Cor: rtey</li>
-        <li style="font-size: 16px; margin-bottom: 8px">Material: rtr</li>
-      </ul>
-    </div>
-  
-    <div style="margin-left: 60px;">
-      <h3 style="font-size: 20px;">Características</h3>
-      <ul style="list-style: none; padding: 0; margin: 0">
-        <li style="font-size: 16px; margin-bottom: 8px">Resistente a impactos</li>
-        <li style="font-size: 16px; margin-bottom: 8px">Fácil de limpar</li>
-        <li style="font-size: 16px; margin-bottom: 8px">Garantia de 1 ano</li>
-      </ul>
+    <div class="mt-4">
+      <button class="text-lg" color="primary" mat-raised-button (click)="adicionarAoCarrinho()"> Adicionar ao Carrinho </button>
     </div>
   </div>
 </div>
-
-
