--- a/src/app/common/home/home.component.html
+++ b/src/app/common/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="text-center h-full mt-5">
   <h1>Bem-vindo à Loja Online</h1>
   <p>Descubra as melhores ofertas e faça compras incríveis!</p>
 </div>
