--- a/src/app/features/produto/components/cadastro-produto/cadastro-produto.component.html
+++ b/src/app/features/produto/components/cadastro-produto/cadastro-produto.component.html
@@ -1,4 +1,4 @@
-<div class="flex mt-9 mb-4 flex-col items-center h-full">
+<div class="flex mt-9 mb-4 flex-col items-center min-h-full">
   <h1>Cadastro de Produto</h1>
   <form class="grid grid-cols-2 example-form" [formGroup]="formProduto">
     <mat-form-field class="example-full-width">
@@ -20,8 +20,9 @@
       <mat-label>Quantidade no Estoque</mat-label>
       <input matInput placeholder="Quantidade no Estoque" formControlName="estoque">
     </mat-form-field>
+
     <div class="ml-2">
       <button mat-raised-button color="primary" (click)="salvarProduto()">Salvar</button>
-    </div>  
+    </div>
   </form>
 </div>
