--- a/src/app/features/produto/components/detalhe-produto/detalhe-produto.component.html
+++ b/src/app/features/produto/components/detalhe-produto/detalhe-produto.component.html
@@ -1,30 +1,34 @@
-<div class="md:grid md:grid-cols-3 flex flex-col mt-5 mb-5 md:h-full" *ngIf="produto">
+<div class="md:grid md:grid-cols-3 flex flex-col mt-5 mb-5 min-h-full" *ngIf="produto">
   <div class="flex flex-col items-center">
-    <img class="md:w-3/5 w-1/3" [src]="produto.nomeImagem" alt="{{ produto.nomeProduto }}"/>
+    <img class="md:w-3/5 w-1/3" [src]="produto.nomeImagem" alt="{{ produto.nomeProduto }}" />
   </div>
-  <div class="flex flex-col items-center mt-7 ml-5 mr-5" >
-     <h2>Descrição do Produto</h2>
-     <p class="break-all">{{produto.descricao}}</p>
+
+  <div class="flex flex-col items-center mt-7 ml-5 mr-5">
+    <h2>Descrição do Produto</h2>
+    <p class="break-all">{{produto.descricao}}</p>
   </div>
+  
   <div class="flex flex-col text-center mt-7">
     <div>
-      <span style="font-size: 25px">Preço: </span>
-      <span style="font-size: 25px; color: green">{{
+      <span class="text-2xl">Preço: </span>
+      <span class="text-2xl text-green-600">{{
         produto.precoUnitario | currency : "BRL" : "symbol" : "1.2-2"}}</span>
     </div>
     <form [formGroup]="meuFormulario">
       <div class="mt-4">
         <mat-form-field class="example-full-width">
-          <mat-label>Quantidade</mat-label>
-          <input matInput placeholder="Quantidade do produto" formControlName="quantidade"/>
+          <mat-label style="margin-left: 74px;">Quantidade</mat-label>
+          <input class="text-center" matInput placeholder="Quantidade do produto" formControlName="quantidade" />
         </mat-form-field>
       </div>
     </form>
     <div>
-      <button class="text-lg" color="primary" mat-raised-button routerLink="pedido" (click)="realizarPedido()">Comprar Agora</button>
+      <button class="text-lg" color="primary" mat-raised-button routerLink="pedido" (click)="realizarPedido()">Comprar
+        Agora</button>
     </div>
     <div class="mt-4">
-      <button class="text-lg" color="primary" mat-raised-button (click)="adicionarAoCarrinho()"> Adicionar ao Carrinho </button>
+      <button class="text-lg" color="primary" mat-raised-button (click)="adicionarAoCarrinho()"> Adicionar ao Carrinho
+      </button>
     </div>
   </div>
 </div>
