--- a/src/app/features/usuario/components/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/features/usuario/components/cadastro-usuario/cadastro-usuario.component.html
@@ -1,41 +1,71 @@
-<div style="margin-top: 20px;">
-  <h1 class="center">Cadastro de Usuários</h1>
-</div>
-  <form [formGroup]="formUsuario">
-    <div class="flex">
-    <mat-form-field class="example-full-width">
-      <mat-label>login</mat-label>
-      <input matInput placeholder="Nome do usuário" formControlName="login">
-    </mat-form-field>
+<div class="flex items-center mt-5 flex-col">
+  <h1>Cadastro de Usuário</h1>
+  <form class="grid grid-cols-4 ml-5 mr-5 gap-x-5" [formGroup]="formUsuario">
+      <mat-form-field class="example-full-width">
+        <mat-label>login</mat-label>
+        <input matInput placeholder="Nome do usuário" formControlName="login">
+      </mat-form-field>
 
-    <mat-form-field class="example-full-width">
-      <mat-label>Senha</mat-label>
-      <input matInput placeholder="Senha do usuário" formControlName="senha">
-    </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Senha</mat-label>
+        <input matInput placeholder="Senha do usuário" formControlName="senha">
+      </mat-form-field>
 
-    <mat-form-field class="example-full-width">
-      <mat-label>Admin</mat-label>
-      <mat-select formControlName="admin">
-        <mat-option>Admin</mat-option>
-        <mat-option value="true">Sim</mat-option>
-        <mat-option value="false">Não</mat-option>
-      </mat-select>
-    </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Admin</mat-label>
+        <mat-select formControlName="admin">
+          <mat-option>Admin</mat-option>
+          <mat-option value="true">Sim</mat-option>
+          <mat-option value="false">Não</mat-option>
+        </mat-select>
+      </mat-form-field>
 
-    <mat-form-field class="example-full-width">
-      <mat-label>Nome</mat-label>
-      <input matInput placeholder="Nome do usuário" formControlName="nome">
-    </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Nome</mat-label>
+        <input matInput placeholder="Nome do usuário" formControlName="nome">
+      </mat-form-field>
 
-    <mat-form-field class="example-full-width">
-      <mat-label>CPF</mat-label>
-      <input matInput placeholder="CPF do usuário" formControlName="cpf">
-    </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>CPF</mat-label>
+        <input matInput placeholder="CPF do usuário" formControlName="cpf">
+      </mat-form-field>
 
-    <app-endereco></app-endereco>
-    
-    <div class="botao">
-      <button [disabled]="formUsuario.invalid" mat-raised-button color="accent" (click)="salvarUsuario()">Salvar</button>
-    </div>
-  </div>
+      <mat-form-field class="example-full-width">
+        <mat-label>Rua</mat-label>
+        <input matInput placeholder="Rua" formControlName="rua">
+      </mat-form-field>
+  
+      <mat-form-field class="example-full-width">
+        <mat-label>Complemento</mat-label>
+        <input matInput placeholder="Complemento" formControlName="complemento">
+      </mat-form-field>
+  
+      <mat-form-field class="example-full-width">
+        <mat-label>Número</mat-label>
+        <input matInput placeholder="Número" formControlName="numero">
+      </mat-form-field>
+  
+      <mat-form-field class="example-full-width">
+        <mat-label>CEP</mat-label>
+        <input matInput placeholder="CEP" formControlName="cep">
+      </mat-form-field>
+  
+      <mat-form-field class="example-full-width">
+        <mat-label>Cidade</mat-label>
+        <input matInput placeholder="Cidade" formControlName="cidade">
+      </mat-form-field>
+  
+      <mat-form-field class="example-full-width">
+        <mat-label>Estado</mat-label>
+        <input matInput placeholder="Estado" formControlName="estado">
+      </mat-form-field>
+  
+      <mat-form-field class="example-full-width">
+        <mat-label>Bairro</mat-label>
+        <input matInput placeholder="Bairro" formControlName="bairro">
+      </mat-form-field>
+      <div>
+        <button mat-raised-button color="accent" (click)="salvarUsuario()">Salvar</button>
+      </div>
   </form>
+</div>
