--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,5 +1,3 @@
-<mat-toolbar appPosicaoToolbar color="primary" *ngIf="estaLogado">
-    <div class="container mx-auto px-4">
-        <p class="text-center">© 2024 Todos os direitos reservados</p>
-    </div>
+<mat-toolbar class="flex justify-center items-center" *ngIf="estaLogado">
+    <p>© 2024 Todos os direitos reservados</p>
 </mat-toolbar>
