--- a/src/app/features/pedido/components/listagem-pedido/listagem-pedido.component.scss
+++ b/src/app/features/pedido/components/listagem-pedido/listagem-pedido.component.scss
@@ -1,11 +1,8 @@
-.container {
-    margin-left: 10px;
-    height: 100%;
-}
 
 mat-card {
     width: 300px;
     margin: 30px 0;
+    cursor: pointer;
 }
 
 h1 {
