fix: correção de rota

--- a/src/app/features/produto/components/detalhe-produto/detalhe-produto.component.html
+++ b/src/app/features/produto/components/detalhe-produto/detalhe-produto.component.html
@@ -23,7 +23,7 @@
       </div>
     </form>
     <div>
-      <button class="text-lg font-medium text-white bg-slate-500 px-8 py-1 rounded-md hover:bg-slate-600 transition duration-300" routerLink="pedido" (click)="realizarPedido()">Comprar
+      <button class="text-lg font-medium text-white bg-slate-500 px-8 py-1 rounded-md hover:bg-slate-600 transition duration-300" (click)="realizarPedido()">Comprar
         Agora</button>
     </div>
     <div class="mt-4">
